cmake_minimum_required (VERSION 3.0)
PROJECT(glMultiWin)

SET(MY_DIR ${glMultiWin_SOURCE_DIR})
SET(glMultiWin_ROOT_DIR ${MY_DIR}/..)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

MESSAGE(STATUS "MY_DIR: " ${MY_DIR})
MESSAGE(STATUS "texture_ROOT_DIR: " ${glMultiWin_ROOT_DIR})


FIND_PACKAGE(PkgConfig)    # try find PKGConfig as it will be used if found
LIST(APPEND CMAKE_MODULE_PATH ${MY_DIR}/cmake_modules) # FindGLFW3.cmake

IF(TARGET freenect2)
  MESSAGE(STATUS "Using in-tree freenect2 target")
  SET(freenect2_LIBRARIES freenect2)
  SET(freenect2_DLLS ${LIBFREENECT2_DLLS})
ELSE()
  FIND_PACKAGE(freenect2 REQUIRED)
  # Out-of-tree build will have to have DLLs manually copied.
ENDIF()

INCLUDE_DIRECTORIES(${freenect2_INCLUDE_DIR})


FIND_PACKAGE(GLFW3 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEWmx REQUIRED)
FIND_PACKAGE(GLM REQUIRED)

INCLUDE_DIRECTORIES(${GLFW3_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS})


MESSAGE(STATUS "GLFW3: " ${GLFW3_INCLUDE_DIRS})
MESSAGE(STATUS "OpenGL: " ${OPENGL_LIBRARIES})
MESSAGE(STATUS "GLEWmx: " ${GLEWmx_LIBRARY})
MESSAGE(STATUS "GLM: " ${GLM_INCLUDE_DIR})


ADD_EXECUTABLE(main src/main.cpp)
TARGET_LINK_LIBRARIES(main ${GLEWmx_LIBRARY} ${OPENGL_LIBRARY} ${GLFW3_LIBRARIES} ${freenect2_LIBRARIES})

ADD_EXECUTABLE(ThreadingDemo src/ThreadingDemo.cpp)
TARGET_LINK_LIBRARIES(ThreadingDemo ${GLEWmx_LIBRARY} ${OPENGL_LIBRARY} ${GLFW3_LIBRARIES} ${freenect2_LIBRARIES})
