cmake_minimum_required (VERSION 3.0)
PROJECT(texture)

SET(MY_DIR ${texture_SOURCE_DIR})
SET(texture_ROOT_DIR ${MY_DIR}/..)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

MESSAGE(STATUS "MY_DIR: " ${MY_DIR})
MESSAGE(STATUS "texture_ROOT_DIR: " ${texture_ROOT_DIR})


FIND_PACKAGE(PkgConfig)    # try find PKGConfig as it will be used if found
LIST(APPEND CMAKE_MODULE_PATH ${MY_DIR}/cmake_modules) # FindGLFW3.cmake

FIND_PACKAGE(GLFW3 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEWmx REQUIRED)
FIND_PACKAGE(GLM REQUIRED)

INCLUDE_DIRECTORIES(${GLFW3_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS})


MESSAGE(STATUS "GLFW3: " ${GLFW3_INCLUDE_DIRS})
MESSAGE(STATUS "OpenGL: " ${OPENGL_LIBRARIES})
MESSAGE(STATUS "GLEWmx: " ${GLEWmx_LIBRARY})
MESSAGE(STATUS "GLM: " ${GLM_INCLUDE_DIR})


ADD_EXECUTABLE(main src/main.cpp)
TARGET_LINK_LIBRARIES(main ${GLEWmx_LIBRARY} ${OPENGL_LIBRARY} ${GLFW3_LIBRARIES})
